--- a/app.json
+++ b/app.json
@@ -25,6 +25,16 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
-  }
+    },
+    "plugins": [
+      "expo-router",
+      [
+        "expo-font",
+        {
+          "fonts": ["./assets/fonts/escrita.ttf"]
+        }
+      ]
+    ]
+  },
+  "scheme": "your-app-scheme"
 }
